/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.13/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
    id 'org.jetbrains.kotlin.jvm' version '2.1.20'
    id 'org.springframework.boot' version '3.4.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use JUnit Jupiter for testing.
    testImplementation libs.junit.jupiter

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // This dependency is used by the application.
    implementation libs.guava
    implementation 'org.json:json:20231013'
    implementation "org.jetbrains.kotlin:kotlin-stdlib"
    implementation "org.jetbrains.kotlin:kotlin-reflect"
    implementation "com.fasterxml.jackson.module:jackson-module-kotlin"
    implementation "org.springframework.boot:spring-boot-starter-web" // REST API
    implementation "org.springframework.boot:spring-boot-starter-thymeleaf" // Server-side rendering
    implementation "org.springframework.boot:spring-boot-starter-data-jpa" // DB ORM
    implementation "org.springframework.boot:spring-boot-starter-websocket:3.4.4" // WebSockets duh lol
    implementation "org.webjars:sockjs-client:1.5.1"
    implementation "org.webjars:stomp-websocket:2.3.4"
    runtimeOnly "com.h2database:h2"
    runtimeOnly "org.springframework.boot:spring-boot-devtools"
    implementation "io.github.cdimascio:dotenv-kotlin:6.4.1"
    implementation "io.ktor:ktor-server-core:2.3.7"
    implementation "io.ktor:ktor-server-netty:2.3.7"
    implementation "io.ktor:ktor-server-html-builder:2.3.7"
    implementation "io.ktor:ktor-server-cors:2.3.7"
    implementation "io.ktor:ktor-client-core:2.3.13"
    implementation "io.ktor:ktor-client-cio:2.3.7"
    implementation "io.ktor:ktor-client-content-negotiation:2.3.7"
    implementation "io.ktor:ktor-serialization-kotlinx-json:2.3.7"
    implementation "io.ktor:ktor-client-auth:2.3.7"

    testImplementation "org.springframework.boot:spring-boot-starter-test"
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'org.example.App'
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}
